# cpp-notes

./: .gitignore  README.md
DelayLoad/: README.md
DelayLoad/src/common/: common_vc14.vcxproj
DelayLoad/src/skse64/: SKSE_DelayLoad.sln
DelayLoad/src/skse64/jpClient/: jpClient.vcxproj  jpClient.vcxproj.filters  skse_connection.cpp
DelayLoad/src/skse64/jpClient/funcs/: funcs.cpp  funcs.h
DelayLoad/src/skse64/jpService/: dllmain.cpp  jpService.vcxproj  jpService.vcxproj.filters  skse_connection.cpp
DelayLoad/src/skse64/jpService/services/: services.cpp  services.h
DelayLoad/src/skse64/skse64/: skse64.vcxproj
DelayLoad/src/skse64/skse64_common/: skse64_common.vcxproj
Parameters/: README.md
Parameters/packing/: CMakeLists.txt  README.md  main.cxx
Parameters/packing/lambda_pack/: lambda_pack.cxx  lambda_pack.h
Parameters/packing/simple/: simple.cxx  simple.h
Parameters/packing/template_pack/: template_pack.cxx  template_pack.h
Parameters/params-jokes/: CMakeLists.txt  README.md  main.cxx
VirtualDestructors/: CMakeLists.txt  README.md  main.cxx
console_unicode/: CMakeLists.txt  CMakePresets.json  README.md  main.cxx
constructors/: README.md
constructors/copy/: CMakeLists.txt  README.md  main.cxx
constructors/explicit/: CMakeLists.txt  README.md  main.cxx
constructors/move/: CMakeLists.txt  README.md  main.cxx
constructors/special/: CMakeLists.txt  README.md  main.cxx
exceptions/: CMakeLists.txt  README.md  main.cxx
mutable/: CMakeLists.txt  README.md  main.cxx
singleton/: CMakeLists.txt  CMakePresets.json  README.md  main.cxx
singleton/classic/: classic.cxx  classic.h
singleton/pointerless/: README.md  pointerless.cxx  pointerless.h
singleton/simple/: README.md  simple.cxx  simple.h
smart_pointers/: CMakeLists.txt  README.md  main.cxx
smart_pointers/SmartPointers/: SmartPointers.cxx  SmartPointers.h
